--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server" : "json-server database/db.json "
+    "server": "json-server database/db.json "
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.4.0"
+    "react-router": "^7.4.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
